[package]
name = "graphics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.27", default-features = false, features = ["windows"] }  # Window management
wgpu = "0.15"   # GPU graphics
lazy_static = "1.4"  # For static variables
libc = "0.2"    # For C-compatible types (optional)

[lib]
crate-type = ["cdylib"]  # Required to build a shared library for FFI